v.9.4.1
- Improved the internal implementation for broadcasting "StateHasChanged" when the current language is changed.

v.9.4.0
- Fix: "dotnet watch msbuild -t:CompileI18nText" command didn't work expectedly.
- Fix: Visual Studio changes a project file unexpectedly when a developer adding a localized text source file.

v.9.3.1
- Fix: Loading Localized Resource JSON files is failed sometimes.

v.9.3.0
- Exposed "ChangeLanguage" as a public event.

v.9.2.0
- Fix: Doesn't work on .NET 5 preview 7.
- Improve: Wasm detection code can be pluggable.

v.9.1.1
- Fix: Visual Studio "Up-to-date Check" support didn't work.

v.9.1.0
- Improved to works fine out of the box even on an access token-based authorization enabled site.

v.9.0.1.1
- Just added package icon.

v.9.0.1
- Fix: Localized Resource JSON files aren't published.

v.9.0.0
- BREAKING CHANGE: Support Blazor v.3.2.0 Preview 2 (not compatible with v.3.2.0 Preview 1 or before.)

v.8.0.0
- Add sub-namespace to Typed Text Table class from the relative location where localized text source files are.

v.7.1.0
- Fix: auto loading JavaScript file is failed sometimes.
- Minify JavaScript file.
- Remove type parameter from "AddI18nText()" because no longer used it.
- Change "// Auto generated..." mark comment to "// <auto-generated .../>" tag for avoid Stylecop warning.

v.7.0.1
- Fix: Problem with new lines in localized text source JSON files

v.7.0.0
- BREAKING CHANGE: Support server-side Blazor server app v.3.0.0 (not compatible with v.3.0.0 Preview 8 or before.)

v.6.0.0
- BREAKING CHANGE: Support Blazor v.3.0.0 Preview 9 (not compatible with v.3.0.0 Preview 8 or before.)

v.5.0.0
- BREAKING CHANGE: Support Blazor v.3.0.0 Preview 8 (not compatible with v.3.0.0 Preview 7 or before.)

v.4.0.0
- BREAKING CHANGE: Support Blazor v.3.0.0 Preview 7 (not compatible with v.3.0.0 Preview 6 or before.)

v.3.0.0
- BREAKING CHANGE: Support Blazor v.3.0.0 Preview 6 (not compatible with v.3.0.0 Preview 5 or before.)

v.2.0.0