@@ -9,7 +9,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="5.0.6" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.0" />
     <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
-    <PackageReference Include="Toolbelt.Blazor.I18nText" Version="9.4.1-preview.1.1" />
+    <PackageReference Include="Toolbelt.Blazor.I18nText" Version="9.4.1-preview.1.2" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Components\SampleSite.Components.csproj" />
