@@ -4,13 +4,13 @@
     <TargetFramework>net5.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageOutputPath>..\_dist\</PackageOutputPath>
-    <Version>10.0.0.10</Version>
+    <Version>10.0.0.11</Version>
   </PropertyGroup>
   <ItemGroup>
     <SupportedPlatform Include="browser" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.6" />
-    <PackageReference Include="Toolbelt.Blazor.I18nText" Version="9.4.1-preview.1.1" />
+    <PackageReference Include="Toolbelt.Blazor.I18nText" Version="9.4.1-preview.1.2" />
   </ItemGroup>
 </Project>
